send zpl command to printer