@@ -52,9 +52,25 @@
 		<dependency>
 			<groupId>com.zebra</groupId>
 			<artifactId>zsdk-api</artifactId>
-			<version>local</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/ZSDK_API.jar</systemPath>
+			<version>2.14.5198</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-logging</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.usb4java</groupId>
+			<artifactId>usb4java</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 	</dependencies>
 
@@ -63,6 +79,30 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>install-zebra-sdk</id>
+						<phase>clean</phase>
+						<configuration>
+							<file>${basedir}/libs/ZSDK_API.jar</file>
+							<groupId>com.zebra</groupId>
+							<artifactId>zsdk-api</artifactId>
+							<version>2.14.5198</version>
+							<packaging>jar</packaging>
+							<generatePom>true</generatePom>
+						</configuration>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
